--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ html {
 }
 
 .nav-wrapper {
-  background-color: #00A6FB;
+  background-color: #e1f1fd;
   width: auto;
   height: auto;
   padding: 30px;
@@ -32,10 +32,25 @@ html {
   margin: 0 0 0 500px;
   right: 20px;
   font-size: 20px;
+  color: #4663ac;
 }
 
 .nav-link {
   text-align: center;
   margin: 0 0 0 50px;
 }
+
+.link {
+  text-decoration: none;
+}
+
+.prof-pic {
+  border: 5px solid;
+  margin: auto;
+  width: 50%;
+  padding: 10px;
+  text-align: center;
+}
+
+
 
